Tried to fix Jeb's Infernal Dash entry audio element going to works listing page on mobile

--- a/css_files/works-listing.css
+++ b/css_files/works-listing.css
@@ -375,7 +375,7 @@ doesn't appear in the document.
 	height: max-content;
 
 	/* Make sure pointer events aren't disabled */
-	pointer-events: initial !important;
+	pointer-events: auto !important;
 }
 
 .listing_entry p {
